# logic

./: CMakeLists.txt  README.md  atom.cpp  atom.h  formula.cpp  formula.h  functions.cpp  functions.h  main.cpp
